--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   build:
+    permissions:
+      contents: write # リリースを作成するための権限
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
