feat: Configure Windows build for portable zip

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
       "output": "release"
     },
     "win": {
-      "target": "nsis"
+      "target": "zip"
     },
     "mac": {
       "target": "dmg"
