Build: update linux build target(AppImage -> [deb, AppImage])

--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
       "target": "dmg"
     },
     "linux": {
-      "target": "AppImage"
+      "target": ["deb","AppImage"],
+      "category": "Utility",
+      "maintainer": "Yu-yu0202 <135312165+Yu-yu0202@users.noreply.github.com>",
+      "description": "A simple GUI for yt-dlp"
     }
   }
 }
