--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
       "category": "Utility",
       "maintainer": "Yu-yu0202 <135312165+Yu-yu0202@users.noreply.github.com>",
       "description": "A simple GUI for yt-dlp"
-    }
+    },
+    "publish": "always"
   }
 }
