--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Build and release Electron app
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: npm run dist 
+      run: npx electron-builder --publish always
