--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
 		"target": "es6",
 		"module": "commonjs",
 		"moduleResolution": "node",
+		"baseUrl": ".",
+		"paths": {
+			"*": ["src/*"]
+		},
 		"lib": [
 			"es5",
 			"es6",
