--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Build and release Electron app
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: pnpm exec electron-builder --publish always
+      run: pnpm run build && pnpm exec electron-builder --publish always
